Update website for release 1.6.0

--- a/index.html
+++ b/index.html
@@ -75,17 +75,21 @@
       <div class="row justify-content-center title">
         <div class="col-10 col-md-8 col-xl-5 text-center">
           <h1 class="display-4">View</h1>
-          <p>Open multiple articles in tabs and read them with a simpler and distraction-free view. Customize fonts and easily switch between light and dark mode.</p>
+          <p>Open multiple articles in tabs and read them with a simpler and distraction-free view. Customize fonts and easily switch between light, sepia and dark mode.</p>
         </div>
       </div>
       <div class="row justify-content-center">
         <div class="col-3 col-sm-2 col-lg-1 text-center">
           <input type="radio" name="theme" id="theme-light" onclick="clickThemeIcon(this);" value="0" checked />
-          <label for="theme-light"><img class="icon-theme icon-light" alt="Sun" src="media/icon-sun.svg"></label>
+          <label for="theme-light"><img class="icon-theme icon-light" alt="Light" src="media/icon-light.svg"></label>
         </div>
         <div class="col-3 col-sm-2 col-lg-1 text-center">
-          <input type="radio" name="theme" id="theme-dark" onclick="clickThemeIcon(this);" value="1" />
-          <label for="theme-dark"><img class="icon-theme icon-dark" alt="Moon" src="media/icon-moon.svg"></label>
+          <input type="radio" name="theme" id="theme-sepia" onclick="clickThemeIcon(this);" value="1" />
+          <label for="theme-sepia"><img class="icon-theme icon-sepia" alt="Sepia" src="media/icon-sepia.svg"></label>
+        </div>
+        <div class="col-3 col-sm-2 col-lg-1 text-center">
+          <input type="radio" name="theme" id="theme-dark" onclick="clickThemeIcon(this);" value="2" />
+          <label for="theme-dark"><img class="icon-theme icon-dark" alt="Dark" src="media/icon-dark.svg"></label>
         </div>
       </div>
       <div class="row justify-content-center">
