Update website for release 2.0

--- a/index.html
+++ b/index.html
@@ -105,26 +105,26 @@
       <div class="row justify-content-center title">
         <div class="col-10 col-md-8 col-xl-5 text-center">
           <h1 class="display-4">Multiple Languages</h1>
-          <p>Wike supports searching and reading articles in almost 300 languages.</p>
+          <p>Wike supports searching and reading articles in more than 300 languages.</p>
         </div>
       </div>
       <div class="row justify-content-center tile">
         <div class="col-11 col-md-8 col-lg-4">
           <div class="item">
             <img class="img-fluid" src="media/languages-filter.png">
-            <p>Select in Preferences the languages ​​you want to make available for searching and reading articles.</p>
+            <p>Select the languages ​​you want to make available for searching and reading articles.</p>
           </div>
         </div>
         <div class="col-11 col-md-8 col-lg-4">
           <div class="item">
             <img class="img-fluid" src="media/languages-select.png">
-            <p>Press the gear icon in the search entry to choose the active language.</p>
+            <p>Press the search settings button in the entry to choose the active language.</p>
           </div>
         </div>
         <div class="col-11 col-md-8 col-lg-4">
           <div class="item">
             <img class="img-fluid" src="media/languages-langlinks.png">
-            <p>You can also see the current article in other languages ​​by clicking the languages button.</p>
+            <p>You can view an article in other languages ​​by clicking the languages button in the sidebar.</p>
           </div>
         </div>
       </div>
@@ -149,7 +149,11 @@
         </div>
         <div class="col-3 col-sm-2 col-lg-1 text-center">
           <input type="radio" name="features" id="features-historic" onclick="clickFeaturesIcon(this);" value="2" />
-          <label for="features-historic"><img class="icon-features icon-historic" alt="Historic" src="media/icon-historic.svg"></label>
+          <label for="features-historic"><img class="icon-features icon-historic" alt="History" src="media/icon-historic.svg"></label>
+        </div>
+        <div class="col-3 col-sm-2 col-lg-1 text-center">
+          <input type="radio" name="features" id="features-mobile" onclick="clickFeaturesIcon(this);" value="3" />
+          <label for="features-mobile"><img class="icon-features icon-mobile" alt="Mobile" src="media/icon-mobile.svg"></label>
         </div>
       </div>
       <div class="row justify-content-center">
@@ -177,14 +181,14 @@
           <p>Install the latest version from Flathub.</p>
         </div>
         <div class="col-7 col-md-3 col-lg-2 text-center">
-          <a href="https://github.com/hugolabe/Wike"><img width="80" height="80" src="media/logo-github.png"></a>
-          <h5>Source Code</h5>
-          <p>Explore source code in GitHub repository.</p>
-        </div>
-        <div class="col-7 col-md-3 col-lg-2 text-center">
           <a href="https://poeditor.com/join/project?hash=kNgJu4MAum"><img width="80" height="80" src="media/logo-poeditor.png"></a>
           <h5>Translations</h5>
           <p>Help translating Wike on POEditor platform.</p>
+        </div>
+        <div class="col-7 col-md-3 col-lg-2 text-center">
+          <a href="https://github.com/hugolabe/Wike"><img width="80" height="80" src="media/logo-github.png"></a>
+          <h5>Source Code</h5>
+          <p>Explore source code in GitHub repository.</p>
         </div>
       </div>
       <div class="row justify-content-center circle"">
