--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-10 col-md-8 col-lg-7 col-xxl-4 container-pc">
-          <img class="image-pc" alt="Wike Computer" src="media/computer.svg">
+        <div class="col-10 col-md-8 col-lg-7 col-xxl-6 container-pc">
+          <img class="image-pc" alt="Wike Computer" src="media/laptop.svg">
           <video class="video-pc" autoplay loop muted playsinline preload="auto">
             <source src="media/wike-video.webm" type="video/webm">
             <source src="media/wike-video.mp4" type="video/mp4">
@@ -94,7 +94,7 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-12 text-center">
-          <img class="img-fluid" id="image-theme" alt="Wike Theme" src="media/wike-light.png">
+          <img class="img-fluid" id="image-theme" width="900" height="700" alt="Wike Theme" src="media/wike-light.png">
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
         <div class="col-11 col-md-8 col-lg-4">
           <div class="item">
             <img class="img-fluid" src="media/languages-select.png">
-            <p>Press the search settings button in the entry to choose the active language.</p>
+            <p>Press the search settings button to choose the active language.</p>
           </div>
         </div>
         <div class="col-11 col-md-8 col-lg-4">
@@ -158,7 +158,7 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-12 text-center">
-          <img class="img-fluid" id="image-features" alt="Wike Features" src="media/wike-toc.png">
+          <img class="img-fluid" id="image-features" width="900" height="700" alt="Wike Features" src="media/wike-toc.png">
           <h5 id="title-features">Table of Contents</h5>
           <p id="text-features">Quickly scroll through the various sections of the article.</p>
         </div>
